# video2notes-v2

./: .dockerignore  .env.example  .gitignore  Dockerfile  clean_dir_filenames.sh  docker-compose.yml  pyproject.toml  readme.md  structure_previous_run.sh  summarize_prompt.txt
.clinerules/: ClineRules.txt  Proj_requirements.md  current_state.md  current_task.md  human_todo_list.md
chrome_extension/: README.md  manifest.json  popup.html  popup.js
human_readable_documentation/: Current_User_Guide.md  git_large_file_fix.md  human_readable_package_list_and_documentation_links.md  review_yt-dlp_cli_commands_doc.md  video_transcribing_fast_iteration_loop.md
human_readable_documentation/archived_from_ai/: Original_Script_based_User_Guide.md  User_Guide.md  video_transcript_ripper_plan-chatgpt5_project_copy.md  yt-dlp.textClipping
legacy_scripts/: README.md  batch_run.sh  transcribe_dir.py
legacy_scripts/transcripts/: .gitkeep  20251217_ai_engineering_in_76_minutes_complete_course_speedrun_jv3pl1_mn2m.md  20251217_behavioral_interviewing_at_progressive_insurance_wnni0cyfh4a.md
previous_run_results/: .gitkeep
src/video2mdnotes/: api.py  config.py  logger.py  main.py
src/video2mdnotes/core/: downloader.py  summarizer.py  transcriber.py
summaries/: .gitkeep
tests/: test_cli_basic.py  test_config.py  test_downloader.py  test_summarizer.py  test_transcriber.py
tests/e2e/: test_full_pipeline.py
