[project]
name = "video2mdnotes"
version = "0.1.0"
description = "Video to Markdown Notes Pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.0.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "litellm>=1.0.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/video2mdnotes"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: marks tests as slow integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
